<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forum.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/inet_global_indo"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="365dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#0C0404" />

    <EditText
        android:id="@+id/password"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#0C0404" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_login"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/RegisterLogin"/>

</LinearLayout>